[package]
name = "opcc"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Minimal cli tool to evaluate the calldata compression rate on the OP Stack."
readme = "README.md"
homepage = "https://github.com/0xkitsune/opcc"
repository = "https://github.com/0xkitsune/opcc"
keywords = ["ethereum", "optimism", "compression"]
exclude = ["target/*", ".github/*", ".gitignore"]


[dependencies]
alloy-primitives = "0.8.21"
eyre = "0.6"
op-alloy-protocol = "0.8.0"
clap = { version = "4.5", features = ["derive"] }
rand = "0.9"
